--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -1612,9 +1612,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
-    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
-    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/boruta_results\""
    ]
   },
   {
@@ -1882,7 +1882,7 @@
    "outputs": [],
    "source": [
     "# from tqdm import tqdm  # Progress bars.\n",
-    "from tqdm.notebook import tqdm"
+    "# from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -1906,212 +1906,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfc2c8db29ba40dcb78a768d6347ce40",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=2), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n",
-      "/home/tyler/anaconda3/lib/python3.7/site-packages/boruta/boruta_py.py:418: RuntimeWarning: invalid value encountered in greater\n",
-      "  hits = np.where(cur_imp[0] > imp_sha_max)[0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
+    "# boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
     "\n",
-    "for target in tqdm([\"species\", \"stress\"]):\n",
-    "    boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
-    "        agem,\n",
-    "        estimator=selecting_model,\n",
-    "        annotation_variables=target,\n",
-    "        max_iter=50)\n",
+    "# for target in tqdm([\"species\", \"stress\"]):\n",
+    "#     boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
+    "#         agem,\n",
+    "#         estimator=selecting_model,\n",
+    "#         annotation_variables=target,\n",
+    "#         max_iter=50)\n",
     "    \n",
-    "    boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
+    "#     boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
    ]
   },
   {
@@ -2123,31 +1931,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<GSForge.GeneSetCollection>\n",
-       "GeneSetCollection01324\n",
-       "    <GSForge.AnnotatedGEM>\n",
-       "    Name: GDS2910\n",
-       "    Selected GEM Variable: 'counts'\n",
-       "        Gene   13056\n",
-       "        Sample 191\n",
-       "GeneSet Keys and # of Selected Genes\n",
-       "    stress: 754\n",
-       "    species: 564"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "boruta_gsc"
+    "# boruta_gsc"
    ]
   },
   {
@@ -2159,11 +1947,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "boruta_gsc.save(GDS2910_boruta_result_path)"
+    "# boruta_gsc.save(GDS2910_boruta_result_path)"
    ]
   },
   {
