--- a/examples/user_guide/Interface_Guide.ipynb
+++ b/examples/user_guide/Interface_Guide.ipynb
@@ -1713,9 +1713,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data/\")\n",
-    "GDS2910_gem_path = demo_dir + \"GDS2910.nc\"\n",
-    "GDS2910_boruta_result_path = demo_dir + \"boruta_results\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "GDS2910_gem_path = demo_dir + \"/GDS2910.nc\"\n",
+    "GDS2910_boruta_result_path = demo_dir + \"/boruta_results\""
    ]
   },
   {
