updates to demo data.

--- a/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,62 +23,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")"
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
+    "# osf_storage_dir = demo_dir + \"/osfstorage\""
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import GEOparse"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "gse = GEOparse.get_GEO(geo=\"GDS2910\", destdir=demo_dir)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\", demo_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18-Dec-2019 12:15:05 INFO GEOparse - Downloading ftp://ftp.ncbi.nlm.nih.gov/geo/datasets/GDS2nnn/GDS2910/soft/GDS2910.soft.gz to ~/GSForge_demo_data/osfstorage/GDS2910.soft.gz\n",
-      "18-Dec-2019 12:15:05 INFO utils - Downloading ftp://ftp.ncbi.nlm.nih.gov/geo/datasets/GDS2nnn/GDS2910/soft/GDS2910.soft.gz to ~/GSForge_demo_data/osfstorage/GDS2910.soft.gz\n"
+      "18-Dec-2019 12:56:40 DEBUG utils - Directory ~/GSForge_demo_data already exists. Skipping.\n",
+      "18-Dec-2019 12:56:40 INFO GEOparse - File already exist: using local version.\n",
+      "18-Dec-2019 12:56:40 INFO GEOparse - Parsing ~/GSForge_demo_data/GDS2910.soft.gz: \n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATABASE: Geo\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATASET: GDS2910\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_1\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_2\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_3\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_4\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_5\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_6\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_7\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_8\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_9\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_10\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_11\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_12\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_13\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_14\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_15\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_16\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_17\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_18\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_19\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_20\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_21\n",
+      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATASET: GDS2910\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D: 100% -  8.6MiB  /  8.6MiB  eta 0:00:01\n"
-     ]
-    },
+    }
+   ],
+   "source": [
+    "gse = GEOparse.get_GEO(geo=\"GDS2910\", destdir=demo_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18-Dec-2019 12:15:08 INFO GEOparse - Parsing ~/GSForge_demo_data/osfstorage/GDS2910.soft.gz: \n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - DATABASE: Geo\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - DATASET: GDS2910\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_1\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_2\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_3\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_4\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_5\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_6\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_7\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_8\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_9\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_10\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_11\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_12\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_13\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_14\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_15\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_16\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_17\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_18\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_19\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_20\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - SUBSET: GDS2910_21\n",
-      "18-Dec-2019 12:15:08 DEBUG GEOparse - DATASET: GDS2910\n"
+      "18-Dec-2019 12:54:05 DEBUG utils - Directory ~/GSForge_demo_data already exists. Skipping.\n",
+      "18-Dec-2019 12:54:05 INFO GEOparse - File already exist: using local version.\n",
+      "18-Dec-2019 12:54:05 INFO GEOparse - Parsing ~/GSForge_demo_data/GDS2910.soft.gz: \n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATABASE: Geo\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATASET: GDS2910\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_1\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_2\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_3\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_4\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_5\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_6\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_7\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_8\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_9\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_10\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_11\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_12\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_13\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_14\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_15\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_16\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_17\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_18\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_19\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_20\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_21\n",
+      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATASET: GDS2910\n"
      ]
     }
    ],
@@ -98,7 +185,7 @@
        "Dimensions:      (Gene: 13056, Sample: 191)\n",
        "Coordinates:\n",
        "  * Sample       (Sample) object 'GSM76723' 'GSM76724' ... 'GSM76804' 'GSM76805'\n",
-       "  * Gene         (Gene) object '1' '2' '3' '4' ... '13054' '13055' '13056'\n",
+       "  * Gene         (Gene) object 'Gene_1' 'Gene_2' ... 'Gene_13055' 'Gene_13056'\n",
        "Data variables:\n",
        "    description  (Sample) object 'Value for GSM76723: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae Heat shock (37oC) 10 minutes; src: S. cerevisiae grown in YPD at 30oC' ... 'Value for GSM76805: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii, transfer from glucose to glycerol, 90 minutes; src: S. kudriavzevii grown in YPD at 24oC'\n",
        "    species      (Sample) object 'S. cerevisiae' ... 'S. kudriavzevii'\n",
@@ -188,10 +275,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
