--- a/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
@@ -27,108 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")\n",
-    "# osf_storage_dir = demo_dir + \"/osfstorage\""
+    "demo_dir = os.environ.get(\"GSFORGE_DEMO_DATA\", \"~/GSForge_demo_data\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "import GEOparse"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "gse = GEOparse.get_GEO(geo=\"GDS2910\", destdir=demo_dir)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\", demo_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "18-Dec-2019 12:56:40 DEBUG utils - Directory ~/GSForge_demo_data already exists. Skipping.\n",
-      "18-Dec-2019 12:56:40 INFO GEOparse - File already exist: using local version.\n",
-      "18-Dec-2019 12:56:40 INFO GEOparse - Parsing ~/GSForge_demo_data/GDS2910.soft.gz: \n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATABASE: Geo\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATASET: GDS2910\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_1\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_2\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_3\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_4\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_5\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_6\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_7\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_8\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_9\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_10\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_11\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_12\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_13\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_14\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_15\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_16\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_17\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_18\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_19\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_20\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - SUBSET: GDS2910_21\n",
-      "18-Dec-2019 12:56:40 DEBUG GEOparse - DATASET: GDS2910\n"
-     ]
-    }
-   ],
-   "source": [
-    "gse = GEOparse.get_GEO(geo=\"GDS2910\", destdir=demo_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -139,33 +39,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "18-Dec-2019 12:54:05 DEBUG utils - Directory ~/GSForge_demo_data already exists. Skipping.\n",
-      "18-Dec-2019 12:54:05 INFO GEOparse - File already exist: using local version.\n",
-      "18-Dec-2019 12:54:05 INFO GEOparse - Parsing ~/GSForge_demo_data/GDS2910.soft.gz: \n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATABASE: Geo\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATASET: GDS2910\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_1\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_2\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_3\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_4\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_5\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_6\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_7\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_8\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_9\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_10\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_11\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_12\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_13\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_14\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_15\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_16\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_17\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_18\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_19\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_20\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - SUBSET: GDS2910_21\n",
-      "18-Dec-2019 12:54:05 DEBUG GEOparse - DATASET: GDS2910\n"
+      "18-Dec-2019 14:06:15 DEBUG utils - Directory ~/GSForge_demo_data already exists. Skipping.\n",
+      "18-Dec-2019 14:06:15 INFO GEOparse - File already exist: using local version.\n",
+      "18-Dec-2019 14:06:15 INFO GEOparse - Parsing ~/GSForge_demo_data/GDS2910.soft.gz: \n",
+      "18-Dec-2019 14:06:15 DEBUG GEOparse - DATABASE: Geo\n",
+      "18-Dec-2019 14:06:15 DEBUG GEOparse - DATASET: GDS2910\n",
+      "18-Dec-2019 14:06:15 DEBUG GEOparse - SUBSET: GDS2910_1\n",
+      "18-Dec-2019 14:06:15 DEBUG GEOparse - SUBSET: GDS2910_2\n",
+      "18-Dec-2019 14:06:15 DEBUG GEOparse - SUBSET: GDS2910_3\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_4\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_5\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_6\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_7\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_8\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_9\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_10\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_11\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_12\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_13\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_14\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_15\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_16\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_17\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_18\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_19\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_20\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - SUBSET: GDS2910_21\n",
+      "18-Dec-2019 14:06:16 DEBUG GEOparse - DATASET: GDS2910\n"
      ]
     }
    ],
@@ -223,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +136,7 @@
        "    Sample 191"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,10 +175,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
