another stab at travis, updated data on osf

--- a/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
@@ -147,6 +147,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GDS2910.nc'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agem.save(\"GDS2910.nc\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
