updated notebooks, cleaned travis file

--- a/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
+++ b/examples/user_guide/AnnotatedGEM_from_NCBI_GEO.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\", demo_dir)"
+    "ds = gsf.utils.ncbi_geo.build_geo_xarray(\"GDS2910\")"
    ]
   },
   {
@@ -195,10 +195,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
