--- a/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
+++ b/examples/user_guide/Selecting_Genes_with_Boruta.ipynb
@@ -2787,7 +2787,7 @@
    "source": [
     "# Progress bars.\n",
     "# from tqdm import tqdm  \n",
-    "from tqdm.notebook import tqdm"
+    "# from tqdm.notebook import tqdm"
    ]
   },
   {
@@ -2815,17 +2815,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
+    "# boruta_gsc = gsf.GeneSetCollection(gem=agem)\n",
     "\n",
-    "for target in tqdm([\"species\", \"stress\"]):\n",
-    "    boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
-    "        agem,\n",
-    "        estimator=selecting_model,\n",
-    "        annotation_variables=target,\n",
-    "        max_iter=100,\n",
-    "        perc=90)\n",
+    "# for target in tqdm([\"species\", \"stress\"]):\n",
+    "#     boruta_treatment_ds = gsf.operations.boruta_prospector(\n",
+    "#         agem,\n",
+    "#         estimator=selecting_model,\n",
+    "#         annotation_variables=target,\n",
+    "#         max_iter=100,\n",
+    "#         perc=90)\n",
     "    \n",
-    "    boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
+    "#     boruta_gsc.gene_sets[target] = gsf.GeneSet(boruta_treatment_ds, name=f\"Boruta_{target}\")"
    ]
   },
   {
